--- a/css/global.css
+++ b/css/global.css
@@ -227,7 +227,7 @@ input{background:none;}
 .g-lib_tab{display: flex; display: -webkit-flex; width: 100%; height: 31px; margin-bottom: 9px;}
 .g-lib_tab li{width: 16.6%; box-sizing: border-box; line-height: 29px; text-align: center; color: #e1e1df; border: 1px solid #000; border-color: #cfd2d4 #000 #7d858c #8c949b; background: #66707a; cursor: pointer;}
 .g-lib_tab li.active{background: none; border: 1px solid transparent; color: #333;}
-.g-search{ display: -moz-box; display: -webkit-box; display: box; width: 406px; height: 35px; margin: 0 10px; margin-bottom: 5px; color: #c1c1c1;}
+.g-search{position: relative; display: -moz-box; display: -webkit-box; display: box; width: 406px; height: 35px; margin: 0 10px; margin-bottom: 5px; color: #c1c1c1;}
 .g-search a{display: inline-block; width: 33px; height: 33px; margin-right: 2px; border: 1px solid #fff; line-height: 33px; text-align: center; border-radius: 3px; background: #fff; }
 .g-search a:hover{border: 1px solid #02afcf;}
 .g-search .u-back{display: none;}
@@ -298,3 +298,7 @@ input{background:none;}
 .m-lib_color li{float:left; width: 68px; height: 68px; margin-right: 5px; margin-bottom: 5px; background: red; border-radius: 3px;}
 .m-lib_color li:nth-child(5n){margin-right: 0;}
 .u-char{display: inline-block; margin-left: 20px; margin-top: 26px; color: #666; font-size: 16px;}
+.pop-cond1{display: none; position: absolute; left: 0px; top: 40px; z-index: 1; width: 268px; height: 398px; border: 1px solid #00b0d0; border-radius: 3px; background: #fff; overflow-y: auto; }
+.pop-cond1 h3{font-size: 14px; color: #f66835; line-height: 24px; margin: 0;}
+.pop-cond1 li{padding-left: 10px; line-height: 24px; color: #666;}
+.pop-cond1 strong{display: block; font-size: 14px; line-height: 24px; font-weight: normal; font-size: 14px;}
