--- a/css/global.css
+++ b/css/global.css
@@ -261,7 +261,7 @@ input{background:none;}
 .m-procs_cg li:first-child .m-subprocs_cg{ display: block;}
 
 .m-lib_list li{width: 20%; float: left; margin-bottom: 4px;}
-.m-lib_list li a{display: block; position: relative; width: 66px; height: 66px; line-height: 66px; text-align: center; border: 1px solid #ececec; border-radius: 3px;}
+.m-lib_list a{display: block; position: relative; width: 66px; height: 66px; line-height: 66px; text-align: center; border: 1px solid #ececec; border-radius: 3px;}
 .m-lib_list a:hover{border: 1px solid #00b0d0;}
 .m-lib_list img{width: 80%; vertical-align: middle;}
 .m-lib_list2 input{width: 68px; padding-top: 4px; line-height: 22px; text-align: center; color: #666;}
@@ -299,7 +299,7 @@ input{background:none;}
 .m-proc_word{float: left; margin-left: 8px; line-height: 17px; color: #666;}
 .m-proc_bill span{float: right; line-height: 66px; color: #666;}
 .m-lib_color{padding-left: 10px; padding-top: 10px;}
-.m-lib_color li{float:left; width: 68px; height: 68px; margin-right: 5px; margin-bottom: 5px; background: red; border-radius: 3px;}
+.m-lib_color li{float:left; width: 68px; height: 68px; margin-right: 5px; margin-bottom: 5px; border-radius: 3px;}
 .m-lib_color li:nth-child(5n){margin-right: 0;}
 .u-char{display: inline-block; margin-left: 20px; margin-top: 26px; color: #666; font-size: 16px;}
 .pop-cond {display: none; position: absolute; left: 0px; top: 40px; z-index: 1; border: 1px solid #00b0d0; border-radius: 3px; background: #fff; overflow-y: auto;}
@@ -378,3 +378,11 @@ input{background:none;}
 .pop-cond2_sl .col{color: #111;}
 .pop-cond2_sl .col-2{width: 260px; height: 29px; line-height: 29px; border: 1px solid #e4e4e4; border-radius: 2px;}
 .pop-cond2_sl select{width: 260px; padding-left: 10px; height: 27px; padding-bottom: 2px;}
+
+.pop{display: flex; justify-content: center; align-items: center; position: absolute; left: 0; top: 0; z-index: 10000; width: 100%; height: 100%; background: rgba(0,0,0,.5);}
+.pop-inner{position: relative; padding: 0 8px; padding-bottom: 8px; border-radius: 5px; background: #65707a;}
+.pop-inner h3{height: 32px; line-height: 32px; text-align: center; color: #fff; font-size: 13px;}
+.pop-inner .icon-close{position: absolute; right: 5px; top: 5px; color: #c1c1c1;}
+.pop-content{width: 100%; border-radius: 5px; background: #fff;}
+.pop-upload .pop-inner{width: 304px; height: 222px;}
+.pop-input input:first{width: 180px; height: 28px; padding-left: 8px; line-height: 28px; border-radius: 3px; border: 1px solid #ccc;}
