--- a/css/global.css
+++ b/css/global.css
@@ -403,20 +403,21 @@ html,body{height: 100%;}
 .dImg{position: absolute; z-index: 10005; opacity: .6;}
 
 /*画布区*/
-.g-cvs_core{width: 100%; height: 100%;}
-.g-cvs_set{width: 100%; height: 100%;}
-.cvs-item{position: absolute; padding: 5px; left: 100px; top: 200px; cursor: move;}
+.g-cvs_core,.g-cvs_set,.g-cvs_item{width: 100%; height: 100%;}
+.g-cvs_item{display: none;}
+.g-cvs_item.active{display: block;}
+.g-cvs_item li{position: absolute; padding: 5px; left: 100px; top: 200px; cursor: move;}
 .cvs-item-box{position: absolute;}
-.g-pointctrl{position: absolute; left: 0; top: 0; width: 100%; height: 100%; border: 1px solid #3399ff;}
-.g-pointctrl span{position: absolute; width: 8px; height: 8px;}
-.g-pointctrl span:nth-child(1){width: 20px; height: 20px; left: -15px; top: -15px; background: red; cursor: url(img/tt.ico);}
-.g-pointctrl span:nth-child(2){left: calc(50% - 5px); top: -5px; background: #fff; border: 1px solid #3399ff; cursor: n-resize;}
-.g-pointctrl span:nth-child(3){right: -5px; top: -5px; cursor: ne-resize;}
-.g-pointctrl span:nth-child(4){right: -5px; top: calc(50% - 5px); background: #fff; border: 1px solid #3399ff; cursor: e-resize;}
-.g-pointctrl span:nth-child(5){right: -5px; bottom: -5px; cursor: se-resize;}
-.g-pointctrl span:nth-child(6){left: calc(50% - 5px); background: #fff; border: 1px solid #3399ff; bottom: -5px; cursor: s-resize;}
-.g-pointctrl span:nth-child(7){left: -5px; bottom: -5px; cursor: sw-resize;}
-.g-pointctrl span:nth-child(8){left: -5px; top: calc(50% - 5px); background: #fff; border: 1px solid #3399ff; cursor: w-resize;}
-.g-pointctrl span:nth-child(9){left: calc(50% - 5px); top: calc(50% - 5px); background: #fff; border: 1px solid #3399ff; cursor: move;}
-.g-pointctrl i{position: absolute; width: 8px; height: 8px; background: #fff; border: 1px solid #3399ff;}
-.g-pointctrl span:nth-child(1) i{right: 0; bottom: 0;}
+.g-pointctrl{display: none; position: absolute; left: 0; top: 0; width: 100%; height: 100%;}
+.g-pointctrl span{position: absolute; width: 8px; height: 8px; background: #fff; border: 1px solid #3399ff;}
+.m-pointctrl{width: 100%; height: 100%; border: 1px solid #3399ff;}
+.m-pointctrl span:nth-child(1){left: -5px; top: -5px; cursor: nw-resize;}
+.m-pointctrl span:nth-child(2){left: calc(50% - 5px); top: -5px;  cursor: n-resize;}
+.m-pointctrl span:nth-child(3){right: -5px; top: -5px; cursor: ne-resize;}
+.m-pointctrl span:nth-child(4){right: -5px; top: calc(50% - 5px); cursor: e-resize;}
+.m-pointctrl span:nth-child(5){right: -5px; bottom: -5px; cursor: se-resize;}
+.m-pointctrl span:nth-child(6){left: calc(50% - 5px); bottom: -5px; cursor: s-resize;}
+.m-pointctrl span:nth-child(7){left: -5px; bottom: -5px; cursor: sw-resize;}
+.m-pointctrl span:nth-child(8){left: -5px; top: calc(50% - 5px); cursor: w-resize;}
+.m-rotatepoint{position: absolute; left: calc(50% - 1px); top: -40px; width: 0; height: 40px; margin: ; border: 1px solid #3399ff;}
+.m-rotatepoint span{position:absolute; left: -5px; top: -10px; background: #3399ff; cursor: url(../img/mouserotate.ico) 10 10,default;}
