--- a/css/global.css
+++ b/css/global.css
@@ -387,7 +387,8 @@ html,body{height: 100%;}
 .pop-inner h3{height: 32px; margin: 0; line-height: 32px; text-align: center; color: #fff; font-size: 14px; font-weight: bold;}
 .pop-inner .icon-close{position: absolute; right: 5px; top: 5px; cursor: pointer;}
 .pop-inner .icon-close:after{color: #ccc;}
-.pop-content{width: 100%; box-sizing: border-box; border-radius: 5px; background: #fff;}
+.pop-content{width: 100%; height: calc(100% - 32px); box-sizing: border-box; border-radius: 5px; background: #fff;}
+.pop-upload{display: none;}
 .pop-upload .pop-content{height: 190px; padding-left: 15px; padding-top: 25px;}
 .pop-upload .pop-inner{width: 304px; height: 222px;}
 .pop-input{margin-bottom: 18px;}
@@ -425,3 +426,17 @@ html,body{height: 100%;}
 .m-pointctrl span:nth-child(8){left: -5px; top: calc(50% - 5px); cursor: w-resize;}
 .m-rotatepoint{position: absolute; left: calc(50% - 1px); top: -40px; width: 0; height: 40px; margin: ; border: 1px solid #3399ff;}
 .m-rotatepoint span{position:absolute; left: -5px; top: -10px; background: #3399ff; cursor: url(../img/mouserotate.ico) 10 10,default;}
+.pop-save{}
+.pop-save .pop-inner{width: 686px; height: 466px;}
+.pop-save dl{padding-left: 46px; padding-top: 53px; margin-bottom: 20px;}
+.pop-save dt{float: left; width: 400px; height: 286px; text-align: center; line-height: 286px; border: 1px solid #ccc;}
+.pop-save dt img{width: 80%; margin: 0 auto; vertical-align: middle;}
+.pop-save dd{width: 200px; float: left;}
+.pop-save .row{height: 26px; margin-bottom: 8px; overflow: auto;}
+.pop-save .col-1{color: #00b0d1; width: 70px; padding-right: 5px; text-align: right; line-height: 26px;}
+.pop-save .col-2{position: relative; width: 120px;}
+.pop-save .col-content{width: 110px; height: 24px; color: #000; line-height: 24px; padding-left: 8px; border: 1px solid #ccc;}
+.pop-save i{position: absolute; right: 5px;}
+.row-color span{display: inline-block; width: 78px; height: 14px; margin-top: 5px; background: red;}
+.pop-save .subcol{position: absolute; z-index: 10000000; left: 0; top: 28px; width: 158px; padding: 11px; border: 1px solid #ccc;}
+.pop-save .subcol a{float: left; width: 50%; height: 22px; line-height: 22px;}
