--- a/css/global.css
+++ b/css/global.css
@@ -408,12 +408,14 @@ html,body{height: 100%;}
 
 /*画布区*/
 .g-cvs_core,.g-cvs_set,.g-cvs_set ul{width: 100%; height: 100%;}
-.g-cvs_set ul{display: none;}
-.g-cvs_set ul.active{display: block;}
+.g-cvs_set >ul{display: none;}
+.g-cvs_set >ul.active{display: block;}
+.g-cvs_set ul ul{width: 100%; height: 100%;}
 .g-cvs_set li{position: absolute;left: 0; top: 0; padding: 5px; left: 100px; top: 200px; cursor: move; }
 .cvs-item-box{position: absolute;}
 .g-pointctrl{display: none; position: absolute; left: 0; top: 0; width: 100%; height: 100%;}
 .g-cvs_set li.active .g-pointctrl{display: block;}
+.g-cvs_set .img_box{position: absolute;}
 .g-pointctrl span{position: absolute; width: 8px; height: 8px; background: #fff; border: 1px solid #3399ff;}
 .m-pointctrl{width: 100%; height: 100%; border: 1px solid #3399ff;}
 .m-pointctrl span:nth-child(1){left: -5px; top: -5px; cursor: nw-resize;}
