--- a/css/global.css
+++ b/css/global.css
@@ -304,9 +304,16 @@ html,body{height: 100%;}
 .m-lib_color{padding-left: 10px; padding-top: 10px;}
 .m-lib_color li{float:left; width: 68px; height: 68px; margin-right: 5px; margin-bottom: 5px; border-radius: 3px; cursor: pointer;}
 .m-lib_color li:nth-child(5n){margin-right: 0;}
-.m-word{padding-top: 25px; margin-left: 20px;}
+.u-color{width: 68px; height: 68px; border-radius: 3px;}
+.m-lib_word{padding-top: 25px; margin-left: 20px;}
 .m-lib_word li{cursor: pointer; width: 68px; height: 68px; font-size: 22px;}
+.u-word{width: 136px; height: 68px; font-size: 14px; color: #333; overflow: hidden;}
 .u-char{display: inline-block; margin-left: 20px; margin-top: 26px; color: #666; font-size: 16px;}
+/*--文本输入框--*/
+.m-word_input{position: absolute; z-index: 10010; left: calc(50% - 230px); top: 127px; width: 265px; height: 32px; padding: 5px 0; padding-left: 5px; color: #333; border: 1px solid #c3c3c3; border-radius: 2px; background: #efefef;}
+.m-word_input input{width: 210px; height: 30px; line-height: 30px; padding-left: 8px; color: #333; border: 1px solid #c3c3c3; background: #fff;}
+.m-word_input span{display: inline-block; width: 38px; line-height: 32px; text-align: center; cursor: pointer;}
+
 .pop-cond {display: none; position: absolute; left: 0px; top: 40px; z-index: 1; border: 1px solid #00b0d0; border-radius: 3px; background: #fff; overflow-y: auto;}
 .pop-cond1{width: 268px; height: 398px;}
 .pop-cond1 h3{font-size: 14px; color: #f66835; line-height: 24px; margin: 0;}
@@ -384,7 +391,7 @@ html,body{height: 100%;}
 .pop-cond2_sl .col-2{width: 260px; height: 29px; line-height: 29px; border: 1px solid #e4e4e4; border-radius: 2px;}
 .pop-cond2_sl select{width: 260px; padding-left: 10px; height: 27px; padding-bottom: 2px;}
 
-.pop{display: flex; display: -webkit-flex; justify-content: center; align-items: center; position: absolute; left: 0; top: 54px; z-index: 10010; width: 100%; height: calc(100% - 54px); background: rgba(0,0,0,.5);}
+.pop{display: flex; display: -webkit-flex; justify-content: center; align-items: center; position: absolute; left: 0; top: 54px; z-index: 10011; width: 100%; height: calc(100% - 54px); background: rgba(0,0,0,.5);}
 .pop-inner{position: relative; padding: 0 8px; padding-bottom: 8px; border-radius: 5px; background: #65707a;}
 .pop-inner h3{height: 32px; margin: 0; line-height: 32px; text-align: center; color: #fff; font-size: 14px; font-weight: bold;}
 .pop-inner .icon-close{position: absolute; right: 5px; top: 5px; cursor: pointer;}
@@ -407,7 +414,6 @@ html,body{height: 100%;}
 
 /*拖动库面板的图片，新建一个img元素*/
 .dobj{position: absolute; z-index: 10005; opacity: .6;}
-
 /*画布区*/
 .g-cvs_core,.g-cvs_set,.g-cvs_set ul{width: 100%; height: 100%;}
 .g-cvs_set >ul{display: none;}
